--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Willitobai/mongo_mongo#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "ejs": "2.6.1",
